<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/marginLarge"
    android:paddingEnd="@dimen/marginLarge"
    android:orientation="vertical">

    <TextView
        android:id="@+id/newMathQuestionHeading"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/HeadingTextView"
        android:layout_marginBottom="@dimen/marginLarge"
        android:text="@string/editMathQestionText"/>

    <EditText
        android:id="@+id/newMathQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newMathQestionHintText"
        android:layout_marginBottom="@dimen/marginLarge"
        android:inputType="text"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/newMathAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/newMathAnswerHintText"
        android:layout_marginBottom="@dimen/marginLarge"
        android:inputType="text"
        tools:ignore="Autofill"/>

    <Spinner
        android:id="@+id/editMathCategoryTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"/>

    <Button
        android:id="@+id/btnSaveChangesForMathQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_marginBottom="@dimen/marginLarge"
        android:layout_gravity="center"
        android:text="@string/saveChangesButtonText"/>

</LinearLayout>