<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/marginLarge"
    android:paddingEnd="@dimen/marginLarge"
    android:orientation="vertical">

    <TextView
        android:id="@+id/newTrueFalseQuestionHeading"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/HeadingTextView"
        android:layout_marginBottom="@dimen/marginLarge"
        android:text="@string/addingNewTrueFalseQuestionText"/>

    <EditText
        android:id="@+id/newTrueFalseQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/questionText"
        android:layout_marginBottom="@dimen/marginLarge"
        tools:ignore="Autofill"/>

    <Spinner
        android:id="@+id/newTrueFalseAnswerSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        />

    <Spinner
        android:id="@+id/trueFalseCategoryTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"/>

    <Button
        android:id="@+id/btnAddTrueFalseQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginLarge"
        android:layout_marginBottom="@dimen/marginLarge"
        android:layout_gravity="center"
        android:enabled="false"
        android:text="@string/saveQuestionText"/>
</LinearLayout>