<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.score.view.SubmitScoreActivity">

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/scoreText"
        android:gravity="center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="50dp">
    </TextView>

    <ImageView
        android:id="@+id/star"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/scoreText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_star">

    </ImageView>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="45sp"
        android:textColor="@color/colorBlack"
        android:text="1000"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/star"
        app:layout_constraintBottom_toBottomOf="@id/star"
        app:layout_constraintEnd_toEndOf="@id/star"
        app:layout_constraintStart_toStartOf="@id/star">
    </TextView>

    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/star"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:hint="@string/korisnickoImeText">
    </EditText>

    <Button
        android:id="@+id/btnSaveScore"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/nickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/spremiScoreText">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>