<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.score.dual.DualScoreActivity">

    <TextView
        android:id="@+id/player1ScoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/player1ScoreText"
        android:gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="50dp">
    </TextView>

    <ImageView
        android:id="@+id/player1Star"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/player1ScoreText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_star">

    </ImageView>

    <TextView
        android:id="@+id/player1Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="45sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/player1Star"
        app:layout_constraintBottom_toBottomOf="@id/player1Star"
        app:layout_constraintEnd_toEndOf="@id/player1Star"
        app:layout_constraintStart_toStartOf="@id/player1Star">
    </TextView>

    <TextView
        android:id="@+id/player2ScoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/player1Star"
        android:text="@string/player2ScoreText"
        android:gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="50dp">
    </TextView>

    <ImageView
        android:id="@+id/player2Star"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/player2ScoreText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_star">

    </ImageView>

    <TextView
        android:id="@+id/player2Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="45sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/player2Star"
        app:layout_constraintBottom_toBottomOf="@id/player2Star"
        app:layout_constraintEnd_toEndOf="@id/player2Star"
        app:layout_constraintStart_toStartOf="@id/player2Star">
    </TextView>

    <Button
        android:id="@+id/exit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:text="@string/exitText">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>